# iwawarper

./: .gitignore  LICENSE.txt  README.md
.github/workflows/: conf.ini  workflow_macos.yml  workflow_windows.yml
doc/: README_ja.md  conf.ini  how_to_build_macosx.md  how_to_build_macosx_ja.md  how_to_build_win.md  how_to_build_win_ja.md
macos/: BundleInfo.plist.in
sources/: CMakeLists.txt  IwaWarper.icns  IwaWarper.rc  IwaWarper_resources.qrc  aboutpopup.cpp  aboutpopup.h  beautification.sh  circletool.cpp  circletool.h  colorsettings.cpp  colorsettings.h  correspondencetool.cpp  correspondencetool.h  cursormanager.cpp  cursormanager.h  cursors.h  dvwidgets.cpp  dvwidgets.h  fill_frag.glsl  formatsettingspopups.cpp  formatsettingspopups.h  freehanddialog.cpp  freehanddialog.h  freehandtool.cpp  freehandtool.h  half.cpp  half.h  halfedge.cpp  halfedge.h  infodialog.cpp  infodialog.h  iocommand.cpp  iocommand.h  iwa_warper.cpp  iwa_warper.h  iwapp.cpp  iwapp.h  iwdialog.cpp  iwdialog.h  iwfolders.cpp  (+136 more)
sources/loc/: IwaWarper_ja.qm
sources/translations/: IwaWarper_ja.ts
stuff/doc/LICENSE/: LICENSE_half.txt  LICENSE_opentoonz.txt  notice_about_modified_qt.txt
stuff/loc/日本語/: IwaWarper.qm
stuff/qss/Dark/: Dark.qss
stuff/qss/Default/: Default.qss
stuff/qss/Default/less/: Default.less
stuff/qss/Default/less/components/: tabs.less
stuff/qss/Default/less/layouts/: all.less  controls.less  mainwindow.less  popups.less
stuff/qss/Default/less/themes/: Dark.less
